# einf

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: architecture.md
src/einf/: __init__.py  diagnostics.py  output_normalization.py  signature.py  tensor_types.py
src/einf/axis/: __init__.py  algebra.py  base.py  collections.py  factory.py  matching.py  scalar_ops.py  symbols.py  terms.py
src/einf/backend/: __init__.py  dispatch.py  memory_alias.py  namespace.py  runtime.py
src/einf/ir/: __init__.py  model.py
src/einf/lowering/: __init__.py  compile.py  core.py  expand.py
src/einf/operations/: __init__.py  api.py  api.pyi  policy.py  tensor_op.py
src/einf/plans/: __init__.py  abstract.py  cache.py  context.py  entrypoint.py  render.py  scoring.py  symbolic.py
src/einf/reduction/: __init__.py  plan.py  schema.py
src/einf/shape/: __init__.py  compile.py  eval.py  nodes.py
src/einf/solver/: api.py  (+5 more)
tests/: conftest.py  test_array_api_execution.py  test_array_api_execution_randomized.py  test_axis_algebra.py  test_backend_dispatch.py  test_benchmark_guardrails.py  test_call_contracts.py  test_conformance_tensor_xform.py  test_diagnostic_contracts.py  test_diagnostics.py  test_dim_solver.py  test_einop_planner_strategy.py  test_ir_model.py  test_package_scaffold.py  test_pipeline_contracts.py  test_plan_fusion.py  test_plan_hierarchy.py  test_planning_contracts.py  test_rearrange_unary_plan_cache.py  test_refactor_parity_guardrails.py  test_shape_eval.py  test_tensorop_contract.py  test_tensorop_plan_api.py  test_typing_surface.py
(+53 files in other folders)
